--- a/languages/wp-job-manager-pt_BR.po
+++ b/languages/wp-job-manager-pt_BR.po
@@ -2,6 +2,7 @@
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
 # Claudio Sanches <contato@claudiosmweb.com>, 2014
+# Fernando Sousa <hotforms@gmail.com>, 2014
 # Mike Jolley <mike.jolley@me.com>, 2014
 # vmassuchetto <vmassuchetto@gmail.com>, 2014
 msgid ""
@@ -9,8 +10,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-05-12 08:21+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2014-10-10 02:20+0000\n"
+"Last-Translator: Fernando Sousa <hotforms@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/wp-job-manager/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,7 +28,7 @@ msgstr "Add-ons do WP Job Manager"
 msgid ""
 "Buying multiple add-ons? <a href=\"%s\">Check out the core add-on bundle "
 "&rarr;</a>"
-msgstr ""
+msgstr "Compre vários add-ons?  <a href=\"%s\"> Confira o pacote de add-on  &rarr; </a>"
 
 #: includes/admin/class-wp-job-manager-admin.php:57
 msgid "Settings"
@@ -45,7 +46,7 @@ msgstr "Aprovar Vagas"
 #: includes/admin/class-wp-job-manager-cpt.php:47
 #: includes/admin/class-wp-job-manager-cpt.php:48
 msgid "Expire Jobs"
-msgstr ""
+msgstr "Vaga Expirada"
 
 #: includes/admin/class-wp-job-manager-cpt.php:135
 #: includes/admin/class-wp-job-manager-cpt.php:137
@@ -55,7 +56,7 @@ msgstr "%s aprovada"
 #: includes/admin/class-wp-job-manager-cpt.php:155
 #: includes/admin/class-wp-job-manager-cpt.php:157
 msgid "%s expired"
-msgstr ""
+msgstr "%s expirado"
 
 #: includes/admin/class-wp-job-manager-cpt.php:200
 msgid "Select a category"
@@ -292,23 +293,23 @@ msgstr "Por quantos <strong>dias</strong> as vagas estarão ativas até que expi
 
 #: includes/admin/class-wp-job-manager-settings.php:120
 msgid "Application method"
-msgstr ""
+msgstr "Método de aplicação"
 
 #: includes/admin/class-wp-job-manager-settings.php:121
 msgid "Choose what employers can use for their job application method."
-msgstr ""
+msgstr "Escolha o que os empregadores podem usar para o seu método de solicitação de aplicação."
 
 #: includes/admin/class-wp-job-manager-settings.php:124
 msgid "Email address or website URL"
-msgstr ""
+msgstr "Email ou Webmail"
 
 #: includes/admin/class-wp-job-manager-settings.php:125
 msgid "Email addresses only"
-msgstr ""
+msgstr "Somente e-mail"
 
 #: includes/admin/class-wp-job-manager-settings.php:126
 msgid "Website URLs only"
-msgstr ""
+msgstr "Somente Website"
 
 #: includes/admin/class-wp-job-manager-settings.php:132
 msgid "Submit Page Slug"
@@ -406,7 +407,7 @@ msgstr "dd-mm-yyyy"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:70
 msgid "Posted by"
-msgstr ""
+msgstr "Postado por"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:83
 msgid "Job Listing Data"
@@ -422,7 +423,7 @@ msgstr "Enviar"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:269
 msgid "Guest user"
-msgstr ""
+msgstr "Usuário Convidado"
 
 #: includes/class-wp-job-manager-ajax.php:111
 msgid "Showing %s&ldquo;%s&rdquo; %sjobs"
@@ -448,7 +449,7 @@ msgstr "Limite de consulta atingido"
 #: includes/class-wp-job-manager-geocode.php:153
 #: includes/class-wp-job-manager-geocode.php:157
 msgid "Geocoding error"
-msgstr ""
+msgstr "Erro ao obter Geo Localização"
 
 #: includes/class-wp-job-manager-install.php:39
 msgid "Employer"
@@ -662,15 +663,15 @@ msgstr "Pronto"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:107
 msgid "Application email"
-msgstr ""
+msgstr "Email de aplicação"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:108
 msgid "you@yourdomain.com"
-msgstr ""
+msgstr "voce@dominio.com.br"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:111
 msgid "Application URL"
-msgstr ""
+msgstr "URL de aplicação"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:112
 #: includes/forms/class-wp-job-manager-form-submit-job.php:182
@@ -732,15 +733,15 @@ msgstr "%s é um campo necessários"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:325
 msgid "Please enter a valid application email address"
-msgstr ""
+msgstr "Por favor insira um endereço de e-mail para aplicação válido"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:330
 msgid "Please enter a valid application URL"
-msgstr ""
+msgstr "Por favor insira um URL de aplicação válida"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:335
 msgid "Please enter a valid application email address or URL"
-msgstr ""
+msgstr "Por favor insira um endereço de e-mail ou URL válida para aplicação"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:456
 msgid "Preview job listing &rarr;"
@@ -786,7 +787,7 @@ msgstr "Entrar"
 msgid ""
 "If you don&rsquo;t have an account you can %screate one below by entering "
 "your email address. A password will be automatically emailed to you."
-msgstr ""
+msgstr "Se você não tem uma conta, você pode criar uma %s abaixo, digitando o seu endereço de e-mail. A senha será automaticamente enviada para você."
 
 #: templates/account-signin.php:27
 msgid "optionally"
@@ -849,7 +850,7 @@ msgstr "Candidatar-se usando o webmail: "
 msgid ""
 "To apply for this job please visit the following URL: <a href=\"%1$s\" "
 "target=\"_blank\">%1$s &rarr;</a>"
-msgstr ""
+msgstr "Para candidatar-se a este emprego, por favor visite o seguinte URL: <a href=\"%1$s\" target=\"_blank\">%1$s &rarr; </a>"
 
 #: templates/job-application.php:5
 msgid "Apply for job"
@@ -970,7 +971,7 @@ msgstr "WP Job Manager"
 
 #. Plugin URI of the plugin/theme
 msgid "https://wpjobmanager.com/"
-msgstr ""
+msgstr "https://wpjobmanager.com/"
 
 #. Description of the plugin/theme
 msgid ""
