--- a/languages/wp-job-manager-ja.po
+++ b/languages/wp-job-manager-ja.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp-job-manager\n"
 "POT-Creation-Date: 2014-05-11 11:00:29+00:00\n"
-"PO-Revision-Date: 2014-10-30 23:39+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"PO-Revision-Date: 2014-12-12 06:40+0000\n"
+"Last-Translator: 田中　昌平 <shohei.tanaka@artisanworkshop.biz>\n"
 "Language-Team: Japanese (http://www.transifex.com/projects/p/wp-job-manager/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -171,18 +171,18 @@ msgstr ""
 
 #: includes/admin/class-wp-job-manager-cpt.php:361
 msgid "View"
-msgstr ""
+msgstr "表示"
 
 #: includes/admin/class-wp-job-manager-cpt.php:366
 #: includes/class-wp-job-manager-post-types.php:162
 #: templates/job-dashboard.php:33
 msgid "Edit"
-msgstr ""
+msgstr "編集"
 
 #: includes/admin/class-wp-job-manager-cpt.php:371
 #: templates/job-dashboard.php:43
 msgid "Delete"
-msgstr ""
+msgstr "削除"
 
 #: includes/admin/class-wp-job-manager-settings.php:42
 #: includes/class-wp-job-manager-post-types.php:138
